<resources>
    <string name="app_name">ExpoAgro Brasil</string>

    <!-- Strings related to login -->
    <string name="campo_email">Email</string>
    <string name="campo_senha">Senha</string>
    <string name="campo_nome">Nome</string>
    <string name="campo_telefone">Telefone</string>
...
    <string name="campo_frequencia">Frequência</string>
    <string name="campo_valor">Valor</string>
    <string name="campo_descricao">Descrição</string>
    <string name="campo_observacao">Observação</string>
    <string name="campo_comentario">Seu comentário</string>

    <string name="acao_login">Entrar</string>
    <string name="acao_voltar">Voltar</string>
    <string name="acao_login_curta">Entrar</string>
    <string name="acao_cadastrar">Cadastrar</string>
    <string name="acao_cancelar">Cancelar</string>
    <string name="acao_alterar_senha">Alterar Senha</string>
    <string name="acao_editar">Editar Conta</string>
...
